--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/nana_chan.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nanaachan's World ✨</title>
-    <meta name="description" content="Welcome to Nanachan's World - a cozy space for dreamy and sweet vibes" />
+    <title>Nanaa chan ✨</title>
+    <meta name="description" content="hewwooo~ welcome to nana's worwdd!! - ✧ a super cozy pwace wiff dreamy & sweet vibesss ꒰ ˘͈ᵕ ˘͈♡꒱" />
     <meta name="theme-color" content="#FDF2F8" />
   </head>
   <body>
