--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/nana_chan.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nanaa chan ✨</title>
-    <meta name="description" content="hewwooo~ welcome to nana's worwdd!! - ✧ a super cozy pwace wiff dreamy & sweet vibesss ꒰ ˘͈ᵕ ˘͈♡꒱" />
+    <meta name="description" content="hewwooo~ welcome to Nanaa Nationn!! - ✧ a super cozy pwace wiff dreamy & sweet vibesss ꒰ ˘͈ᵕ ˘͈♡꒱" />
     <meta name="theme-color" content="#FDF2F8" />
   </head>
   <body>
